# rifts

./: BenchMark.adoc  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.adoc  README.md  deny.toml  doc.md
.github/workflows/: ci.yml  dependabot.yml  publish.yml  security.yml
benches/: ack_metrics.rs  broker_actor.rs  broker_memory.rs  e2e_inprocess.rs  fanout.rs  flow_control.rs  frame_model.rs  message_model.rs  serde_codecs.rs  session_resume.rs  sled_store.rs  storage_memory.rs  throughput.rs  topic_store.rs  websocket_loop.rs  wire_frame.rs
benches/common/: mod.rs
doc/: architecture.adoc  examples.adoc  getting-started.adoc  index.adoc
doc/protocol/: index.adoc
examples/: cluster_node.rs  redis_multi_instance.rs  update_benchmark_readme.rs
src/: config.rs  connection.rs  error.rs  lib.rs  metrics.rs  server.rs  trace.rs
src/ack/: mod.rs
src/actor/: actor_ref.rs  messages.rs  mod.rs  registry.rs  topic_actor.rs
src/broker/: actor_broker.rs  broker.rs  dedupe.rs  fanout.rs  memory_broker.rs  mod.rs  offset_store.rs  remote_broker.rs  router.rs  snapshot_store.rs  wire.rs
src/client/: config.rs  connection.rs  error.rs  events.rs  frame_builder.rs  heartbeat.rs  mod.rs  rift_client.rs  subscriber.rs
src/cluster/: broker.rs  connection.rs  gossip.rs  router.rs  wire.rs
src/codec/: cbor.rs  codec.rs  json.rs  mod.rs
src/flow/: backpressure.rs  mod.rs  rate_limit.rs
src/frame/: envelope.rs  mod.rs  types.rs
src/message/: command.rs  datagram.rs  event.rs  mod.rs  snapshot.rs  (+2 more)
tests/: cluster_integration.rs  integration.rs  redis_integration.rs
(+43 files in other folders)
